--- a/source/public/styles/styles.css
+++ b/source/public/styles/styles.css
@@ -27,7 +27,7 @@ h6 {
 	font-family: 'Nunito', sans-serif;
 }
 
-input,
+input:not([type="checkbox"]),
 textarea {
 	border-radius: 0.5em !important;
 }
